Fixed vertical spacing between two buttons

--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ p {
 }
 
 .project {
-    margin: 30px 0 55px 0;
+    margin: 30px 0 0 0;
 }
 
 .button-container {
